--- a/sway/config
+++ b/sway/config
@@ -19,17 +19,11 @@ set $term foot
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 set $menu dmenu_path | dmenu | xargs swaymsg exec --
+#output * bg /home/d337/Изображения/BAZA.jpg fill
+#output HDMI-A-2 position 0 0
 
-### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
+#output DP-1 position 1920 0
+
 
 input * {
     xkb_layout us,ru
@@ -49,7 +43,8 @@ exec swayidle -w timeout 300 'swaylock -f -c 000000'
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 bindsym $mod+l exec swaylock -f -c 000000
-bindsym $mod+w firefox
+bindsym $mod+w exec firefox
+bindsym $mod+k exec systemctl suspend && swaylock -c 000000
 
 
 ### Input configuration
@@ -196,7 +191,8 @@ bindsym $mod+r mode "resize"
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
-	    colors {
+    status_command swaybar
+        colors {
         statusline #ffffff
         background #323232
         inactive_workspace #32323200 #32323200 #5c5c5c
@@ -204,8 +200,7 @@ bar {
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     #status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
-	status_command i3blocks
-
+    status_command i3blocks
 }
 
 include /etc/sway/config.d/*
